<resources>
    <string name="app_name">온리원셀링</string>
    <string name="app_name_munja">온리원문자</string>
    <string name="notification_channel_alarm_description">온리원문자 알림 채널입니다.</string>
    <string name="default_notification_channel_id">mms5.onepagebook.com.onlyonesms.manager.PushManager.alarm</string>
    <string name="label_id">아이디</string>
    <string name="label_pw">비밀번호</string>
    <string name="label_login">로그인</string>
    <string name="label_sign_up">회원가입</string>
    <string name="title_sub">스마트폰 문자를 PC와 연동해 발송하는</string>
    <string name="title_main">온리원문자 APP</string>
    <string name="auto_login">자동 로그인</string>
    <string name="privacy_policy"><u>개인정보처리방침</u></string>
    <string name="msg_please_type_id">아이디를 입력해주세요.</string>
    <string name="msg_please_type_pw">비밀번호를 입력해주세요.</string>

    <string name="login_guide1">온리원문자앱 로그인 안내</string>
    <string name="login_guide2">1.아이디 : 소유폰ID와 추가폰ID 중 선택하세요.</string>
    <string name="login_guide3">* 소유폰ID : 내가 가입한 계정의 로그인 ID</string>
    <string name="login_guide4">* 추가폰ID : 타인 계정에 문자만 추가할 경우, 타인 계정의 로그인 ID</string>
    <string name="login_guide5">2.비밀번호 : 해당 계정의 PW를 입력하세요.</string>

    <string name="login_desc1">온리원셀링의 모든 서비스를 사용하려면</string>
    <string name="login_desc2">온리원문자앱 로그인이 필수입니다.</string>
    <string name="login_desc3">온리원셀링은 온리원문자를 기반으로 연락처 관리 및 동기화, 콜백문자, 대량문자, 데일리문자, 아이엠 프렌즈 등 다양한 서비스를 제공하고 있습니다.\n\n따라서, 온리원문자 로그인을 하셔야 합니다. 비로그인시 서비스 일부가 작동되지 않을 수 있습니다.</string>

    <string name="join_guide">* 계정이 없으면 회원가입 하세요.</string>
    <string name="join">회원가입</string>
    <string name="find">아이디/비밀번호 찾기</string>

    <string name="term_cancel">취소</string>
    <string name="term_agree">동의합니다.</string>
    <string name="msg_no_usim">해당폰은 USIM이 없어 사용할수 없습니다.\n만약 정상적으로 개통된 폰이라면 다시 실행해 주세요.</string>
    <string name="msg_success_to_log_in">로그인 되었습니다.</string>
    <string name="msg_fail_to_log_in_1">패스워드가 틀렸습니다. </string>
    <string name="msg_fail_to_log_in_2">가입되지 않은 ID 입니다.</string>
    <string name="msg_fail_to_log_in_3">해당 번호는 이미 등록되었습니다.</string>
    <string name="msg_fail_to_log_in_4">결제내역이 없습니다.</string>
    <string name="msg_fail_to_log_in_5">결제된 기부폰이 없습니다. </string>
    <string name="msg_fail_to_log_in">로그인 실패 하였습니다.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="desc">
        온리원문자 어플을 설치해주셔서 감사합니다.\n\n
        1. 이 페이지가 보이면 휴대폰에 문자앱 설치가 정상적으로 완료된 것입니다.\n
        2. 오늘 발송문자량과 이달 발송문자량은 본 어플을 통해 발송된 문자량 입니다.\n
        3. 본 어플 사용을 중단하실 때는 환경설정>애플리케이션 관리에서 삭제하시면 됩니다.</string>
    <string name="desc1">온리원문자 어플을 설치해주셔서 감사합니다.</string>
    <string name="desc2">문자량 : 온리원문자 앱에서 오늘/이달 발송된 문자량을 의미합니다.</string>
    <string name="desc3">계정변경 : 다른 계정에서 발송하려면 우측 상단에 있는 [발송계정변경] 클릭 후 새 계정으로 다시 로그인하세요.</string>
    <string name="desc4">유의사항 : 휴대폰등록변경시 발송했던 문자량 데이터가 초기화되어 추가발송될 수 있으니 유의하세요.</string>
    <string name="label_today_sms_count">오늘 발송 문자량</string>
    <string name="label_month_sms_count">이달 발송 문자량</string>
    <string name="label_phone_number">휴대폰 번호</string>
    <string name="unit_sms">건</string>
    <string name="action_logging">log</string>
    <string name="term_confirm">변경</string>
    <string name="msg_default_app">온리원문자 앱을 사용하기위해서는,\온리원문자 앱을 기본 문자 앱으로\n설정해주셔야합니다.</string>
    <string name="term_not_allow">변경하지 않음</string>
    <string name="term_making_default">기본 문자 앱으로 바꾸기</string>
    <string name="mgs_default_app">현재 기본 앱입니다.</string>
    <string name="go_to_another_sms_app">내 문자 작성</string>
    <string name="msg_processing_sending_mms">문자를 보내는 중입니다.</string>
    <string name="u_can_use_this_app">온리원문자앱을 사용하실 수 있습니다.</string>
    <string name="phone_change">발송계정변경</string>

    <string name="callback_msg_service">콜백문자 이용</string>
    <string name="msg_box_confirm">내 문자 확인</string>
    <string name="use_check">사용여부</string>
    <string name="use">사용</string>
    <string name="not_use">미사용</string>
    <string name="callback_msg_reg">콜백 메시지 작성</string>
    <string name="callback_msg_address">콜백 주소록 설정</string>
    <string name="confirm">확인</string>
    <string name="iam_service">아이엠 이용</string>

    <string name="callback_msg_setting">콜백문자 사용설정</string>
    <string name="use_on_text_recv">문자수신 콜백사용</string>
    <string name="use_on_call_recv">전화수신 콜백사용</string>
    <string name="use_on_call_send">전화발신 콜백사용</string>
    <string name="call_recv_auto_callback">전화수신 자동콜백</string>
    <string name="text_recv_auto_callback">문자수신 자동콜백</string>
    <string name="callback_write">콜백작성</string>
    <string name="callback_cancel">발송취소</string>
    <string name="choice_msg">메시지 선택</string>

    <string name="callback_desc1">전화수신 선택콜백 : 전화를 걸어 통화한 후 그 때 콜백문자를 선택하여 발송하는 기능입니다.</string>
    <string name="callback_desc2">전화발신 선택콜백 : 전화를 받아 통화한 후 그 때 콜백문자를 선택하여 발송하는 기능입니다.</string>
    <string name="callback_desc3">전화수신 자동발송 : 전화를 받아 통화한 후 미리 선택한 콜백문자를 자동으로 발송하는 기능입니다.</string>
    <string name="callback_desc4">문자수신 자동발송 : 문자를 수신하고 나면 미리 선택한 콜백문자를 자동으로 발송하는 기능입니다.</string>
    <string name="please_choice_msg">전화수신 자동콜백을 선택하셨습니다.\n자동으로 보낼 메시지를 선택하셔야 합니다.</string>
    <string name="callback_title_sub">문자수신 또는 전화통화 후에 좋은 인상을 남기는</string>
    <string name="callback_title_main">온리원콜백</string>
    <string name="callback_desc">인사말과 링크, 이미지를 준비하여 콜백문자를 작성하고 설정버튼을 선택하면 스마트폰의 무료문자로 발송됩니다.</string>

    <string name="connect_service">접속 서비스</string>
    <string name="choose_connect_service">접속 서비스를 선택하세요</string>
    <string name="msg_please_service_point">접속 서비스를 선택해주세요</string>

    <string name="tab_1">수신</string>
    <string name="tab_2">부재중</string>
    <string name="tab_3">발신</string>
    <string name="delete">삭제</string>
    <string name="update">수정</string>
    <string name="send">발송</string>
    <string name="choice">선택</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="send_type">발송 방법</string>
    <string name="send_option">같은 번호 발송옵션</string>
    <string name="img_del">이미지 삭제</string>
    <string name="img_load">이미지 업로드</string>
    <string name="img_box">이미지 보관함</string>
    <string name="ad">광고</string>
    <string name="all_day">하루 종일</string>
    <string name="send_abs">부재중 발신</string>
    <string name="adoption">적용</string>
    <string name="msg_reg">메시지 등록</string>
    <string name="please_reg_msg">메시지가 등록되어 있지 않습니다.\n메시지를 등록해주세요.</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="photo_take">앨범에서 선택</string>
    <string name="photo_capture">카메라 촬영</string>
    <string name="donot_take_photo">촬영한 사진 데이터를 가져오지 못했습니다</string>
    <string name="msg_save">메시지 저장</string>
    <string name="msg_box">메시지 보관함</string>
    <string name="please_input_msg">메시지를 입력해주세요</string>
    <string name="please_input_category">분야를 입력해주세요</string>
    <string name="please_input_title">제목을 입력해주세요</string>
    <string name="msg_setting">메시지 동작 설정</string>
    <string name="send_type_setting">발송방법설정</string>
    <string name="tab_1_type">수신 메시지</string>
    <string name="tab_2_type">부재중 메시지</string>
    <string name="tab_3_type">발신 메시지</string>
    <string name="there_is_no_image">등록된 이미지가 없습니다</string>
    <string name="msg_delete">메시지 삭제</string>
    <string name="q_msg_delete">해당 메시지를 삭제하시겠습니까?</string>
    <string name="img_delete">이미지 삭제</string>
    <string name="q_img_delete">해당 이미지를 삭제하시겠습니까?</string>
    <string name="callback_address_settings">콜백 주소록 설정</string>
    <string name="callback_block_number">발송제한 번호</string>
    <string name="callback_permit_number">발송허용 번호</string>
    <string name="telnum_delete">전화번호 삭제</string>
    <string name="q_telnum_delete">해당 전화번호를 삭제하시겠습니까?</string>
    <string name="sended_msg">메시지를 보냈습니다</string>
    <string name="updated_msg">메시지를 수정했습니다</string>

    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>

    <string name="log_title">로그수집 안내</string>
    <string name="log_guide">PC-폰 문자발송시스템에서는 폰사용, 통신환경에 따라 발송오류가 자주 발생합니다\n\n이렇게 문자발송이 실패한 경우 로그자료를 다운받아 조사하여 어떤 오류였는지 확인하여 해결할 수 있습니다.\n\n하지만 로그수집은 폰의 저장공간을 사용하므로 가끔 저장된 로그자료를 삭제해야 합니다.</string>
    <string name="log_send">로그 보내기</string>
    <string name="log_delete">로그 삭제하기</string>
    <string name="log_on">로그기능 ON</string>
    <string name="log_off">로그기능 OFF</string>

    <string name="log_warning">로그정보 저장과 분석비용 안내\n\n\n이제부터 앱이 사용되는 과정을 이 화면에 로그정보로 기록합니다.\n\n만약 오류가 발생할 경우 해당 로그 자료를 본사에 담당자에게 보내시면 됩니다.\n\n이때 해당 로그정보의 오류해결을 위해 앱 개발자에게 보내서 분석을 의뢰해야 하므로 유료입니다.\n\n단, 해당 오류가 앱 자체의 오류일 경우 납부한 비용은 환불해드리지만 사용자의 설정이나 통신 등의 오류일 경우에는 분석비용을 앱개발자에게 지급하게 됩니다.

감사합니다.
</string>

    <string-array name="send_types">
        <item>메시지 바로 전송</item>
        <item>확인 후 전송</item>
    </string-array>

    <string-array name="send_options">
        <item>중복발송 허용</item>
        <item>하루 1회</item>
        <item>일주일 1회</item>
        <item>한달 1회</item>
    </string-array>

</resources>
