<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:text="@string/callback_msg_setting"/>

            <CheckBox
                android:id="@+id/check1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/use_on_text_recv"/>

            <CheckBox
                android:id="@+id/check2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/use_on_call_recv"/>

            <CheckBox
                android:id="@+id/check3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/use_on_call_send"/>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_cb_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:background="@drawable/bg_btn_primary"
            android:paddingTop="12dp"
            android:paddingRight="30dp"
            android:paddingBottom="12dp"
            android:text="@string/callback_msg_reg"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>