<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"/>

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/baseline_menu_black_24"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_sub"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/title_main"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:scrollbarStyle="outsideOverlay"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/label_id"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="4dp"
                    android:inputType="text"
                    android:maxLength="24"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:hint="@string/msg_please_type_id"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/label_pw"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="4dp"
                    android:inputType="textPassword"
                    android:maxLength="24"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:hint="@string/msg_please_type_pw"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="16dp">
                    <CheckBox
                        android:id="@+id/cb_autologin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/auto_login"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:checked="true"/>

                    <TextView
                        android:id="@+id/tv_privacy_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"/>
                </RelativeLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_btn_primary"
                    android:text="@string/label_login"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/join_guide"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    android:background="@drawable/box_guide">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_guide1"
                            android:textColor="@android:color/white"
                            android:textSize="17sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginLeft="6dp"
                        android:text="@string/login_guide2"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:layout_marginLeft="6dp"
                        android:text="@string/login_guide3"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:layout_marginLeft="6dp"
                        android:text="@string/login_guide4"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_guide5"
                        android:layout_marginRight="6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="8dp"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center" />
        </FrameLayout>
    </ScrollView>

</LinearLayout>