<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_snd_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_category"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/please_input_category"
                android:maxLines="1"
                android:textSize="16sp"
                android:background="@drawable/bg_edit"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/please_input_title"
                android:maxLines="1"
                android:textSize="16sp"
                android:background="@drawable/bg_edit"/>

            <FrameLayout
                android:id="@+id/fl_photo"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:padding="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/box_cancel">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/photo_plus"/>
                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:id="@+id/iv_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="top|right"
                    android:src="@drawable/photo_delete"
                    android:visibility="gone"/>
            </FrameLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_msg"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:inputType="textMultiLine"
                android:hint="@string/please_input_msg"
                android:textSize="16sp"
                android:gravity="top|left"
                android:background="@drawable/bg_edit"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_gravity="right"
                    android:text="@string/save"/>

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_gravity="right"
                    android:text="@string/send"/>

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/cancel"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>