<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="12dp"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:text="@string/use_check"/>

            <RadioGroup
                android:id="@+id/rg_use"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:checked="false"
                    android:text="@string/use"/>

                <RadioButton
                    android:id="@+id/rb_not_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:checked="true"
                    android:text="@string/not_use"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_cb_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:background="@drawable/bg_btn_primary"
            android:paddingTop="12dp"
            android:paddingRight="30dp"
            android:paddingBottom="12dp"
            android:text="@string/callback_msg_reg"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_cb_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:background="@drawable/bg_btn_primary"
            android:paddingTop="12dp"
            android:paddingRight="30dp"
            android:paddingBottom="12dp"
            android:text="@string/callback_msg_address"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>